[project]
name = "Flask-PageDown"
version = "0.4.1.dev0"
authors = [
    { name = "Miguel Grinberg", email = "miguel.grinberg@gmail.com" },
]
description = "Implementation of StackOverflow's \"PageDown\" markdown editor for Flask-WTF."
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Flask",
    "WTForms",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/miguelgrinberg/flask-pagedown"
"Bug Tracker" = "https://github.com/miguelgrinberg/flask-pagedown/issues"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

