[metadata]
name = Flask-PageDown
version = 0.3.1.dev0
author = Miguel Grinberg
author_email = miguel.grinberg@gmail.com
description = Implementation of StackOverflow's "PageDown" markdown editor for Flask-WTF.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/miguelgrinberg/flask-pagedown
project_urls =
    Bug Tracker = https://github.com/miguelgrinberg/flask-pagedown/issues
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
install_requires =
    Flask
    WTForms

[options.packages.find]
where = src
